logs/dag_id=capstone_project/run_id=scheduled__2023-09-27T00:00:00+00:00/task_id=create_postgres_table/attempt=3.log
[2023-10-03T13:54:29.996+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: capstone_project.create_postgres_table scheduled__2023-09-27T00:00:00+00:00 [queued]>
[2023-10-03T13:54:30.006+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: capstone_project.create_postgres_table scheduled__2023-09-27T00:00:00+00:00 [queued]>
[2023-10-03T13:54:30.006+0000] {taskinstance.py:1331} INFO - Starting attempt 3 of 3
[2023-10-03T13:54:30.024+0000] {taskinstance.py:1350} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-09-27 00:00:00+00:00
[2023-10-03T13:54:30.030+0000] {standard_task_runner.py:57} INFO - Started process 1344 to run task
[2023-10-03T13:54:30.033+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'capstone_project', 'create_postgres_table', 'scheduled__2023-09-27T00:00:00+00:00', '--job-id', '367', '--raw', '--subdir', 'DAGS_FOLDER/capstone_project.py', '--cfg-path', '/tmp/tmp8mg8jft3']
[2023-10-03T13:54:30.035+0000] {standard_task_runner.py:85} INFO - Job 367: Subtask create_postgres_table
[2023-10-03T13:54:30.083+0000] {task_command.py:410} INFO - Running <TaskInstance: capstone_project.create_postgres_table scheduled__2023-09-27T00:00:00+00:00 [running]> on host 9a30478b5169
[2023-10-03T13:54:30.168+0000] {taskinstance.py:1570} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='capstone_project' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-09-27T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-09-27T00:00:00+00:00'
[2023-10-03T13:54:30.169+0000] {sql.py:262} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS rocket_launches (
            id VARCHAR,
            name VARCHAR,
            status VARCHAR,
            country_code VARCHAR,
            service_provider_name VARCHAR,
            service_provider_type VARCHAR,
            );
        
[2023-10-03T13:54:30.177+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-10-03T13:54:30.233+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-10-03T13:54:30.237+0000] {sql.py:375} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS rocket_launches (
            id VARCHAR,
            name VARCHAR,
            status VARCHAR,
            country_code VARCHAR,
            service_provider_name VARCHAR,
            service_provider_type VARCHAR,
            );
        , parameters: None
[2023-10-03T13:54:30.238+0000] {taskinstance.py:1847} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:             );
                    ^

[2023-10-03T13:54:30.245+0000] {taskinstance.py:1373} INFO - Marking task as FAILED. dag_id=capstone_project, task_id=create_postgres_table, execution_date=20230927T000000, start_date=20231003T135429, end_date=20231003T135430
[2023-10-03T13:54:30.260+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 367 for task create_postgres_table (syntax error at or near ")"
LINE 9:             );
                    ^
; 1344)
[2023-10-03T13:54:30.285+0000] {local_task_job_runner.py:232} INFO - Task exited with return code 1
[2023-10-03T13:54:30.299+0000] {taskinstance.py:2674} INFO - 0 downstream tasks scheduled from follow-on schedule check
